# CMakeProject1

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json
benchmarks/: bench_library.cpp  bench_spsc.cpp
include/: library.h
src/: library.cpp  pointers.cpp
tests/: spsc_bench.cpp  test_fn1.cpp  test_spsc.cpp
